--- a/phantomcommerce/app/search/SearchPage.module.scss
+++ b/phantomcommerce/app/search/SearchPage.module.scss
@@ -35,6 +35,13 @@
   margin-bottom: 2.5rem;
 }
 
+/* ESTILO DA GRADE DE JOGOS ADICIONADO */
+.gameGrid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  gap: 2.5rem;
+}
+
 .noResults {
   display: flex;
   flex-direction: column;
@@ -49,4 +56,3 @@
   margin-bottom: 1.5rem;
   color: var(--primary-color-400);
 }
-
